--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Bookshelf
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:azcUjKrqwMdNB1sh8oawbL3bcqz8qskdyCsTCUAl7kA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://bookshelf.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
