--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Bookshelf
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:azcUjKrqwMdNB1sh8oawbL3bcqz8qskdyCsTCUAl7kA=
 APP_DEBUG=true
-APP_URL=http://bookshelf.test
+APP_URL=https://bookshelf.katelynnbarlowe.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
