--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "autoprefixer": "^10.4.7",
         "axios": "^0.25",
         "bootstrap": "^5.1.3",
+        "eslint-config-prettier": "^8.5.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
+        "prettier": "2.7.1",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
